@@ -9,7 +9,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: check.c,v 1.4 2000/07/05 11:58:39 strauss Exp $
+ * @(#) $Id: check.c,v 1.5 2000/07/06 14:40:42 strauss Exp $
  */
 
 #include <config.h>
@@ -598,7 +598,7 @@ smiCheckIndex(Parser *parser, Object *object)
 					object->export.name);
 		}
 	    } else {
-	        for (list2Ptr = typePtr->listPtr;
+	        for (list2Ptr = rtypePtr->listPtr;
 		     list2Ptr; list2Ptr = list2Ptr->nextPtr) {
 		    rangePtr = (Range *) list2Ptr->ptr;
 		    if (rangePtr->export.maxValue.value.integer32 > maxSize) {
@@ -610,13 +610,15 @@ smiCheckIndex(Parser *parser, Object *object)
 		}
 	    }
 	    len += maxSize;
-	    if (indexPtr->export.implied) {
+	    /* IpAddress is special; it never requires a length */
+	    if (!indexPtr->export.implied &&
+		!(rTypePtr && !strcmp(rTypePtr->export.name, "IpAddress"))) {
 		len++;
 	    }
 	    break;
 	case SMI_BASETYPE_OBJECTIDENTIFIER:
 	    len += 128;
-	    if (indexPtr->export.implied) {
+	    if (!indexPtr->export.implied) {
 		len++;
 	    }
 	    break;
